# crypto-bigint

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cargo-checkct.yml  crypto-bigint.yml  dudect.yml  mayhem.yml  publish.yml  security-audit.yml
benches/: README.md  bench.rs  boxed_monty.rs  boxed_residue.rs  boxed_uint.rs  const_monty.rs  dyn_residue.rs  int.rs  limb.rs  monty.rs  residue.rs  uint.rs
benches/gungraun/: ct_uint_cmp_vartime.rs  ct_uint_gcd.rs  ct_uint_modpow.rs  ct_uint_ops.rs  mod.rs
checkct/: Cargo.toml  rust-toolchain.toml
checkct/.cargo/: config.toml
checkct/driver/: Cargo.toml
checkct/driver/src/: driver.rs  main.rs  rng.rs
dudect/: Cargo.toml
dudect/src/: main.rs
fuzz/: Cargo.toml  Dockerfile
fuzz/fuzz_targets/: add.rs  add_256.rs  add_512.rs
fuzz/mayhemfiles/: Mayhemfile_add  Mayhemfile_add_256  Mayhemfile_add_512
proptests/tests/: equivalence.rs
src/: array.rs  bitlen.rs  checked.rs  const_choice.rs  ct.rs  ct_choice.rs  decimal.rs  encoding.rs  ff_natural.rs  int.rs  jacobi.rs  lib.rs  limb.rs  low_level.rs  macros.rs  modular.rs  non_zero.rs  odd.rs  powdr.rs  primitives.rs  traits.rs  uint.rs  word.rs  wrapping.rs
src/boxed/: uint.rs
src/boxed/uint/: add.rs  add_mod.rs  bit_and.rs  cmp.rs  encoding.rs  modular.rs  mul.rs  sub.rs  sub_mod.rs
src/int/: add.rs  bingcd.rs  bit_and.rs  bit_not.rs  bit_or.rs  bit_xor.rs  cmp.rs  ct.rs  div.rs  div_uint.rs  div_unsigned.rs  encoding.rs  expand.rs  from.rs  gcd.rs  inv_mod.rs  invert_mod.rs  macros.rs  mod_symbol.rs  mul.rs  mul_uint.rs  mul_unsigned.rs  neg.rs  rand.rs  resize.rs  select.rs  shl.rs  shr.rs  sign.rs  sqrt.rs  sub.rs  types.rs
src/limb/: add.rs  bit_and.rs  bit_not.rs  bit_or.rs  bit_xor.rs  bits.rs  cmp.rs  ct.rs  div.rs  encoding.rs  from.rs  gcd.rs  invert_mod.rs  mul.rs  neg.rs  rand.rs  select.rs  shl.rs  shr.rs  sqrt.rs  sub.rs
src/low_level/: almost_montgomery_mul.rs
src/modular/: add.rs  bernstein_yang.rs  bingcd.rs  boxed_monty_form.rs  boxed_residue.rs  const_monty_form.rs  div_by_2.rs  dyn_residue.rs  fixed_monty_form.rs  inv.rs  lincomb.rs  monty_form.rs  monty_params.rs  mul.rs  params.rs  pow.rs  prime_params.rs  reduction.rs  residue.rs  safegcd.rs  shr1.rs  sqrt.rs  sub.rs
src/modular/bernstein_yang/: boxed.rs  macros.rs
src/modular/bingcd/: compact.rs  div_mod_2k.rs  extension.rs  gcd.rs  matrix.rs  tools.rs  xgcd.rs
src/modular/boxed_monty_form/: add.rs  cmp.rs  ct.rs  from.rs  inv.rs  invert.rs  lincomb.rs  mul.rs  neg.rs  pow.rs  select.rs  sub.rs
src/modular/boxed_residue/: add.rs  inv.rs  mul.rs  neg.rs  pow.rs  sub.rs
src/modular/const_monty_form/: add.rs  cmp.rs  ct.rs  inv.rs  invert.rs  lincomb.rs  macros.rs  mod_symbol.rs  mul.rs  neg.rs  pow.rs  reduce.rs  select.rs  sqrt.rs  sub.rs
src/modular/constant_mod/: add.rs
src/modular/dyn_residue/: add.rs  inv.rs  mul.rs  neg.rs  pow.rs  sub.rs
src/modular/fixed_monty_form/: add.rs  ct.rs  invert.rs  lincomb.rs  mod_symbol.rs  mul.rs  neg.rs  pow.rs  sub.rs
src/modular/monty_form/: add.rs  cmp.rs  ct.rs  inv.rs  invert.rs  lincomb.rs  mod_symbol.rs  mul.rs  neg.rs  pow.rs  select.rs  sub.rs
src/modular/residue/: add.rs  inv.rs  macros.rs  mul.rs  neg.rs  pow.rs  sub.rs
src/modular/safegcd/: boxed.rs  macros.rs
src/traits/: sealed.rs
src/uint/: add.rs  add_mod.rs  and.rs  array.rs  bingcd.rs  bit_and.rs  bit_not.rs  bit_or.rs  bit_xor.rs  bits.rs  boxed.rs  cmp.rs  concat.rs  convert.rs  ct.rs  div.rs  div_limb.rs  encoding.rs  extra_sizes.rs  extra_sizes_16k.rs  extra_trait_impls.rs  from.rs  gcd.rs  inv_mod.rs  invert_mod.rs  karatsuba_mul.rs  lcm.rs  macros.rs  mod_symbol.rs  modular.rs  mul.rs  mul_int.rs  mul_mod.rs  mul_signed.rs  neg.rs  neg_mod.rs  new_gcd.rs  not.rs  num.rs  or.rs  (+17 more)
src/uint/bingcd/: extension.rs  gcd.rs  matrix.rs  tools.rs  xgcd.rs
src/uint/boxed/: add.rs  add_mod.rs  bit_and.rs  bit_not.rs  bit_or.rs  bit_xor.rs  bits.rs  cmp.rs  ct.rs  div.rs  div_limb.rs  encoding.rs  from.rs  gcd.rs  inv_mod.rs  invert_mod.rs  lcm.rs  modular.rs  mul.rs  mul_mod.rs  neg.rs  neg_mod.rs  pow.rs  pow_mod.rs  rand.rs  select.rs  shl.rs  shr.rs  sqrt.rs  sub.rs  sub_mod.rs
src/uint/boxed/encoding/: serde.rs
src/uint/boxed/mul/: helper.rs
src/uint/encoding/: decoder.rs  der.rs  rlp.rs
src/uint/extra_trait_impls/: concat.rs  convert.rs  mul.rs
src/uint/modular/: add.rs  constant_mod.rs  div_by_2.rs  inv.rs  macros.rs  mod.rs  mul.rs  multiexp.rs  neg.rs  pow.rs  reduction.rs  runtime_mod.rs  sub.rs
src/uint/modular/constant_mod/: const_add.rs  const_inv.rs  const_mul.rs  const_neg.rs  const_pow.rs  const_square.rs  const_sub.rs  inv.rs  macros.rs  mod.rs  neg.rs  sub.rs
src/uint/modular/runtime_mod/: mod.rs  runtime_add.rs  runtime_inv.rs  runtime_mul.rs  runtime_neg.rs  runtime_pow.rs  runtime_square.rs  runtime_sub.rs
src/uint/mul/: karatsuba.rs  schoolbook.rs
src/uint/new_gcd/: extension.rs  matrix.rs
src/uint/ref_type/: add.rs  bits.rs  cmp.rs  ct.rs  div.rs  inv_mod.rs  invert_mod.rs  mul.rs  shl.rs  shr.rs  slice.rs  sqrt.rs  sub.rs
tests/: bernstein_yang.rs  bernstein_yang_proptests.proptest-regressions  bernstein_yang_proptests.rs  boxed_monty_form.proptest-regressions  boxed_monty_form.rs  boxed_residue_proptests.proptest-regressions  boxed_residue_proptests.rs  boxed_uint.proptest-regressions  boxed_uint.rs  boxed_uint_proptests.proptest-regressions  boxed_uint_proptests.rs  const_monty_form.rs  const_residue.rs  dyn_residue_proptests.rs  fixed_monty_form.rs  impl_modulus.rs  int.rs  limb.rs  monty_form.proptest-regressions  monty_form.rs  proptests.rs  residue.rs  safegcd.proptest-regressions  safegcd.rs  serde.rs  uint.proptest-regressions  uint.rs  uint_proptests.rs
tests/common/: mod.rs
