[package]
name = "crypto-bigint"
version = "0.7.0-rc.10"
description = """
Pure Rust implementation of a big integer library which has been designed from
the ground-up for use in cryptographic applications. Provides constant-time,
no_std-friendly implementations of modern formulas using const generics.
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/crypto-bigint"
categories = ["algorithms", "cryptography", "data-structures", "mathematics", "no-std"]
keywords = ["arbitrary", "crypto", "bignum", "integer", "precision"]
readme = "README.md"
resolver = "2"
edition = "2024"
rust-version = "1.85"

[dependencies]
subtle = { version = "2.6", default-features = false }

# optional dependencies
der = { version = "0.8.0-rc.9", optional = true, default-features = false }
hybrid-array = { version = "0.4.5", optional = true, features = ["subtle"] }
num-traits = { version = "0.2.19", default-features = false }
rand_core = { version = "0.10.0-rc-2", optional = true, default-features = false }
rlp = { version = "0.6", optional = true, default-features = false }
serdect = { version = "0.4", optional = true, default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
bincode = { version = "2", features = ["serde"] }
chacha20 = { version = "0.10.0-rc.3", default-features = false, features = ["rng"] }
criterion = { version = "0.7", features = ["html_reports"] }
gungraun = { version = "0.17.0"}
hex-literal = "1"
num-bigint = "0.4"
num-integer = "0.1"
num-modular = { version = "0.6", features = ["num-bigint", "num-integer", "num-traits"] }
proptest = "1.9"
rand_core = "0.10.0-rc-2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
walkdir = "2"


[features]
default = ["rand"]
alloc = ["serdect?/alloc"]

extra-sizes = []
gungraun = []
rand = ["rand_core"]
serde = ["dep:serdect"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.typos.default]
extend-ignore-re = ["([0-9A-Fa-f]{16,})"]

[[bench]]
name = "boxed_monty"
harness = false
required-features = ["alloc"]

[[bench]]
name = "boxed_uint"
harness = false
required-features = ["alloc"]

[[bench]]
name = "const_monty"
harness = false

[[bench]]
name = "limb"
harness = false

[[bench]]
name = "monty"
harness = false

[[bench]]
name = "uint"
harness = false

[[bench]]
name = "int"
harness = false

[[bench]]
name = "ct_gungraun"
path = "benches/gungraun/mod.rs"
harness = false
required-features = ["gungraun", "rand"]

[profile.dev]
opt-level = 2
