[package]
name = "crypto-bigint"
version = "0.7.0-rc.18"
description = """
Pure Rust implementation of a big integer library which has been designed from
the ground-up for use in cryptographic applications. Provides constant-time,
no_std-friendly implementations of modern formulas using const generics.
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/crypto-bigint"
categories = ["algorithms", "cryptography", "data-structures", "mathematics", "no-std"]
keywords = ["arbitrary", "crypto", "bignum", "integer", "precision"]
readme = "README.md"
resolver = "2"
edition = "2024"
rust-version = "1.85"
exclude = [".codecov.yml", ".github", ".gitignore"]

[dependencies]
ctutils = "0.4.0-pre.4"
num-traits = { version = "0.2.19", default-features = false }

# optional dependencies
der = { version = "0.8.0-rc.10", optional = true, default-features = false }
hybrid-array = { version = "0.4.5", optional = true }
getrandom = { version = "0.4.0-rc.0", optional = true, features = ["sys_rng"] }
rand_core = { version = "0.10.0-rc-3", optional = true, default-features = false }
rlp = { version = "0.6", optional = true, default-features = false }
serdect = { version = "0.4", optional = true, default-features = false }
subtle = { version = "2.6", optional = true, default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
chacha20 = { version = "0.10.0-rc.6", default-features = false, features = ["rng"] }
criterion = { version = "0.7", features = ["html_reports"] }
hex-literal = "1"
num-bigint = "0.4"
num-integer = "0.1"
num-modular = { version = "0.6", features = ["num-bigint", "num-integer", "num-traits"] }
proptest = "1.9"
rand_core = "0.10.0-rc-3"

[features]
default = ["rand_core"]
alloc = ["serdect?/alloc"]

extra-sizes = []
getrandom = ["dep:getrandom", "rand_core"]
rand_core = ["dep:rand_core"]
serde = ["dep:serdect"]
subtle = ["dep:subtle", "ctutils/subtle", "hybrid-array?/subtle"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.typos.default]
extend-ignore-re = ["([0-9A-Fa-f]{16,})"]

[[bench]]
name = "boxed_monty"
harness = false
required-features = ["alloc"]

[[bench]]
name = "boxed_uint"
harness = false
required-features = ["alloc"]

[[bench]]
name = "const_monty"
harness = false

[[bench]]
name = "limb"
harness = false

[[bench]]
name = "monty"
harness = false

[[bench]]
name = "uint"
harness = false

[[bench]]
name = "int"
harness = false

[profile.dev]
opt-level = 2
